[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
edition = "2018"

[dependencies]
bitcoincore-rpc = { path = "../client" }
bitcoin = { git = "https://github.com/doriancoin-project/rust-doriancoin", branch = "dsv", features = ["serde", "rand"] }
lazy_static = "1.4.0"
log = "0.4"
